--- a/study-buddy-app/package.json
+++ b/study-buddy-app/package.json
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.7",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "react-native-navigation-container": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
