--- a/study-buddy-app/package.json
+++ b/study-buddy-app/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.7",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^8.9.1",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-navigation-container": "^1.0.6"
