--- a/study-buddy-app/package.json
+++ b/study-buddy-app/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@firebase/auth": "^0.20.5",
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.7",
