--- a/study-buddy-app/package.json
+++ b/study-buddy-app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@firebase/auth": "^0.20.5",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.3.3",
@@ -19,7 +20,10 @@
     "firebase": "^8.9.1",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-navigation-container": "^1.0.6"
+    "react-native-feather": "^1.1.2",
+    "react-native-navigation-container": "^1.0.6",
+    "react-native-svg": "^9.13.3",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
