--- a/study-buddy-app/package.json
+++ b/study-buddy-app/package.json
@@ -22,7 +22,7 @@
     "react-native": "0.69.5",
     "react-native-feather": "^1.1.2",
     "react-native-navigation-container": "^1.0.6",
-    "react-native-svg": "^9.13.3",
+    "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
