--- a/study-buddy-app/package.json
+++ b/study-buddy-app/package.json
@@ -20,6 +20,7 @@
     "firebase": "^8.9.1",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-color-picker": "^0.6.0",
     "react-native-feather": "^1.1.2",
     "react-native-navigation-container": "^1.0.6",
     "react-native-svg": "12.3.0",
