--- a/study-buddy-app/package.json
+++ b/study-buddy-app/package.json
@@ -19,10 +19,12 @@
     "expo-status-bar": "~1.4.0",
     "firebase": "^8.9.1",
     "react": "18.0.0",
+    "react-dropdown-select": "^4.9.0",
     "react-native": "0.69.5",
     "react-native-color-picker": "^0.6.0",
     "react-native-feather": "^1.1.2",
     "react-native-navigation-container": "^1.0.6",
+    "react-native-select-dropdown": "^2.0.4",
     "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.2.0"
   },
