--- a/study-buddy-app/package.json
+++ b/study-buddy-app/package.json
@@ -15,16 +15,19 @@
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "bootstrap": "^5.2.0",
     "expo": "~46.0.7",
     "expo-status-bar": "~1.4.0",
     "firebase": "^8.9.1",
     "react": "18.0.0",
+    "react-bootstrap": "^2.5.0",
     "react-dropdown-select": "^4.9.0",
     "react-native": "0.69.5",
     "react-native-color-picker": "^0.6.0",
     "react-native-feather": "^1.1.2",
     "react-native-navigation-container": "^1.0.6",
     "react-native-select-dropdown": "^2.0.4",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.2.0"
   },
