--- a/study-buddy-app/package.json
+++ b/study-buddy-app/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.69.5",
     "react-native-color-picker": "^0.6.0",
     "react-native-feather": "^1.1.2",
+    "react-native-modal": "^13.0.1",
     "react-native-navigation-container": "^1.0.6",
     "react-native-select-dropdown": "^2.0.4",
     "react-native-snap-carousel": "^4.0.0-beta.6",
